src/test/deca/context/valid/test_class/return_float.deca
// Description:
//    Class with a method returning a float.
// Results:
//    3.2
//
// History:
//    Created on 16/01/2025

class A {
    float retour() {
        return 3.2;
    }
}

{
    A a = new A() ;
    println(a.retour()) ;
}