src/test/deca/context/invalid/test_class/selection_protected_float.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    protected float x = 3.2;


}

{
    A a = new A();
    println(a.x);
}


